--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,10 @@
 =========
 Changelog
 =========
+0.3.0
+* [+] Added XmlInputFile and OutputParser classes
+* [+] ExperimentDescription class renamed to ExperimentSpecification
+
 
 0.2.3
 =====
