--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+0.4.0 2014-01-02
+=====
+
+* [+] Added support for vector measures (Vector_Nv0, Vector_Nv, Vector_Ov and Vector_Sv)
+* [+] Added vectors property in XmlInputFile (list of vectors in a scenario.xml)
+
 0.3.1 2014-12-22
 =====
 * [+] Added description for every continuous channel
