--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,11 @@
 Changelog
 =========
 
+0.5.3 2014-02-04
+=====
+* [*] Scenario xml property now returns declaration with a newline char prior to root
+* [+] implemented xml property for every section in Scenario
+
 0.5.2 2014-01-30
 =====
 * [*] Fixed missing setter for SurveyOptions on pypi
