--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,10 @@
 =========
 Changelog
 =========
+0.7.1 2015-02-24
+=====
+* [*] Updated experiment baseline scenario loading to check current directory and experiment's directory.
+
 0.7.0 2015-02-22
 =====
 * [!] moved deployments section to scenario.interventions.human (from scenario.interventions)
