--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,10 @@
 =========
 Changelog
 =========
+0.8.2 2015-03-05
+====
+* [+] Add anopheles property setter on VectorPopIntervention.
+
 0.8.1 2015-03-03
 ====
 * [*] Fix parsing of VectorPop timesteps.
