--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,16 @@
 =========
 Changelog
 =========
+0.8.7 2015-04-02
+====
+* [+] Support for Vaccine components (TBV, PEV, BSV).
+
+0.8.6 2015-04-02
+====
+* [*] PEP 8 compliance.
+* [*] Root 'bin' folder renamed to 'scripts'.
+* [-] Removal of unused class method (test method for creating scenario from scratch).
+
 0.8.5 2015-03-27
 ====
 * [+] Added monitoring helper functions for getting/setting survey times based on start date, as well as years and months spanned.
