--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,12 @@
 =========
 Changelog
 =========
+0.8.3 2015-03-19
+====
+* [*] Update Sphinx support and project hierarchy.
+* [+] Add module to serve as source for project's metadata.
+* [-] Remove deprecated input subpackage and relevant usage/tests.
+
 0.8.2 2015-03-05
 ====
 * [+] Add anopheles property setter on VectorPopIntervention.
