--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,13 @@
 =========
 Changelog
 =========
+0.9.0 2015-06-17
+====
+* [+] Ability to add/update intervention sections (vectorPop, human).
+* [+] Ability to add/update intervention subsections and attributes.
+* [*] Added missing property setters for relevant intervention subsections.
+* [*] Documentation links updated.
+
 0.8.9 2015-04-30
 ====
 * [*] Correctly append new anopheles snippets to entomology vector section.
