--- a/Changelog
+++ b/Changelog
@@ -1,11 +1,14 @@
 =========
 Changelog
 =========
-0.9.1.dev2 2015-06-25
+0.9.1.dev3 2015-06-26
 ====
 * [+] Setters for vaccine intervention attributes.
 * [+] Ability to overwrite Deployment attributes.
 * [+] Ability to overwrite <deployment>s for human interventions.
+* [+] Ability to delete individual components of a deployment.
+* [+] Ability to delete individual interventions.
+* [+] Ability to remove <interventions> subsections by name.
 
 0.9.0 2015-06-17
 ====
