--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,7 @@
 =========
 Changelog
 =========
-0.9.1.dev3 2015-06-26
+0.9.1.dev4 2015-06-30
 ====
 * [+] Setters for vaccine intervention attributes.
 * [+] Ability to overwrite Deployment attributes.
@@ -9,6 +9,7 @@ Changelog
 * [+] Ability to delete individual components of a deployment.
 * [+] Ability to delete individual interventions.
 * [+] Ability to remove <interventions> subsections by name.
+* [+] Support for <importedInfections> section in <interventions>.
 
 0.9.0 2015-06-17
 ====
