--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,9 @@
 =========
 Changelog
 =========
+0.9.2 2017-02-27
+* [+] Add __getitem__ container method to Deployments section. (This allows one to obtain a deployment by index: deployment = scenario.interventions.human.deployments[1])
+
 0.9.1 2015-07-31
 ====
 * [+] Setters for vaccine intervention attributes.
