--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,9 @@
 =========
 Changelog
 =========
+0.9.4 2018-04-08
+* [*] Fixed exception when survey timestamps are float (e.g. 730.0)
+
 0.9.3 2018-02-27
 * [+] Added support for Python 3
 
