--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,9 @@
 =========
 Changelog
 =========
+New
+* [*] Added six as a dependency
+
 0.9.4 2018-04-08
 * [*] Fixed exception when survey timestamps are float (e.g. 730.0)
 
