--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ Changelog
 =========
 New
 * [*] Added six as a dependency
+* [*] Reverted changes made in 0.9.4. Web interface needs a fix instead
 
 0.9.4 2018-04-08
 * [*] Fixed exception when survey timestamps are float (e.g. 730.0)
