--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,10 @@
 Changelog
 =========
 New
+*
+
+0.9.4 2018-04-24
+* [*] Reverted changes made in 0.9.5
 * [*] Added six as a dependency
 
 0.9.4 2018-04-08
