--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,9 @@
 Changelog
 =========
 
+0.6.6 2018-05-05
+* [*] Fixed a bug - monthly monitoring didn't work
+
 0.9.5 2018-04-14
 * [*] Added six as a dependency
 * [*] Reverted changes made in 0.9.4. Web interface needs a fix instead
